--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --bolder-font: 900;
   --bg-color: #fcfcfc;
   --primary-color: #4756df;
-  --secondary-color: #ff7235;
+  --secondary-color: #7f41e3;
   --primary-shadow: #8b8eaf;
   --secondary-shadow: #a17a69;
   --bottom-margin: 0.5rem;
